hphp/test/slow/unsupported_return_by_reference.php.expectf

Fatal error: A name, __construct, or __destruct keyword is expected here. in %s/unsupported_return_by_reference.php on line 6
